--- a/delius-prod/ansible/group_vars/mis_primarydb.yml
+++ b/delius-prod/ansible/group_vars/mis_primarydb.yml
@@ -29,9 +29,14 @@ required_patches:
           filename: p34755459_1924000DBRU_Linux-x86-64.zip
         - target_version: "19.25"
           filename: p34755459_1925000DBRU_Linux-x86-64.zip
+      description: "ORA-00600 [QERIXGETKEY OPTDESC] WITH FUNCTION BASED INDEX ON SUBSTR"
+      grid_patch: false
+      database_patch: true
+    p35413661:
+      patch_files:
         - target_version: "19.27"
           filename: p35413661_1927000DBRU_Linux-x86-64.zip
-      description: "ORA-00600 [QERIXGETKEY OPTDESC] WITH FUNCTION BASED INDEX ON SUBSTR"
+      description: "ORA-600 [OPTDESC] ASSERT NEED TO BE INTRODUCED EARLIER IN QKNA INSTEAD OF QERIX"
       grid_patch: false
       database_patch: true
 delius_users:
