--- a/delius-prod/ansible/group_vars/mis_standbydb1.yml
+++ b/delius-prod/ansible/group_vars/mis_standbydb1.yml
@@ -31,6 +31,8 @@ required_patches:
       patch_files:
         - target_version: "19.27"
           filename: p35413661_1927000DBRU_Linux-x86-64.zip
+        - target_version: "19.28"
+          filename: p35413661_1928000DBRU_Linux-x86-64.zip
       description: "ORA-600 [OPTDESC] ASSERT NEED TO BE INTRODUCED EARLIER IN QKNA INSTEAD OF QERIX"
       grid_patch: false
       database_patch: true
